--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,9 @@
--#  This file is app/views/movies/index.html.haml
-%h1 All Movies
-
 %table#movies
   %thead
     %tr
       %th= link_to "Movie Title"
       %th{:class => ('hilite' if @sort == 'title')}= link_to "Movie Title", movies_path(:sort=>'title')
-      %th Rating
+      %th= link_to "Rating"
       %th Release Date
       %th More Info
   %tbody
@@ -16,5 +13,4 @@
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
-
 = link_to 'Add new movie', new_movie_path
