--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -10,9 +10,23 @@
           = check_box_tag "ratings[#{rating}]", value='', checked="true"
         = submit_tag 'Refresh'
         
-      %th{:class => ('hilite' if @sort == 'title')}= link_to "Movie Title", movies_path(:sort=>'title'), id: "title_header"
+      %th{params[:sort] == "title" ? {:class => "hilite"} : {}}= link_to "Movie Title", movies_path(:sort => "title", ratings: params[:ratings]), :id => "title_header", "data-no-turbolink" => "true"
       %th Rating
-      %th{:class => ('hilite' if @sort == 'release_date')}= link_to "Release Date", movies_path(:sort=>'release_date'), id: "release_date_header"
+      -#  Release Date Header
+      %th{params[:sort] == "release_date" ? {:class => "hilite"} : {}}= link_to "Release Date", movies_path(:sort => "release_date", ratings: params[:ratings]), :id => "release_date_header", "data-no-turbolink" => "true"
+      %th More Info
+      
+      
+  %tbody
+    - @movies.each do |movie|
+      %tr
+        %td= movie.title
+        %td= movie.rating
+        %td= movie.release_date
+        %td= link_to "More about #{movie.title}", movie_path(movie)
+
+= link_to 'Add new movie', new_movie_path 
+
       %th More Info
   %tbody
   %tbody
