--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,32 +1,17 @@
 -# The table headers
 %table#movies
   %thead
-    %tr
-      
-      = form_tag movies_path, :method => :get do
+    %div
+     = form_tag movies_path, :method => :get do
         Include:
         - @all_ratings.each do |rating|
           = rating
           = check_box_tag "ratings[#{rating}]", value='', checked="true"
         = submit_tag 'Refresh'
-        
-      %th{params[:sort] == "title" ? {:class => "hilite"} : {}}= link_to "Movie Title", movies_path(:sort => "title", ratings: params[:ratings]), :id => "title_header", "data-no-turbolink" => "true"
+    %tr
+      %th{:class => ('hilite' if @sort == 'title')}= link_to "Movie Title", movies_path(:sort=>'title'), id: "title_header"
       %th Rating
-      -#  Release Date Header
-      %th{params[:sort] == "release_date" ? {:class => "hilite"} : {}}= link_to "Release Date", movies_path(:sort => "release_date", ratings: params[:ratings]), :id => "release_date_header", "data-no-turbolink" => "true"
-      %th More Info
-      
-      
-  %tbody
-    - @movies.each do |movie|
-      %tr
-        %td= movie.title
-        %td= movie.rating
-        %td= movie.release_date
-        %td= link_to "More about #{movie.title}", movie_path(movie)
-
-= link_to 'Add new movie', new_movie_path 
-
+      %th{:class => ('hilite' if @sort == 'release_date')}= link_to "Release Date", movies_path(:sort=>'release_date'), id: "release_date_header"
       %th More Info
   %tbody
   %tbody
